--- a/crates/braine_web/index.html
+++ b/crates/braine_web/index.html
@@ -8,32 +8,8 @@
     <!-- Trunk entrypoint: builds the crate in this folder to WASM -->
     <link data-trunk rel="rust" data-wasm-opt="z" />
 
-    <style>
-      :root {
-        color-scheme: dark;
-        --bg: #0b1020;
-        --panel: #111a33;
-        --text: #e8ecff;
-        --muted: #aab4e6;
-        --accent: #7aa2ff;
-        --border: rgba(122, 162, 255, 0.25);
-      }
-      html,
-      body {
-        height: 100%;
-        margin: 0;
-        font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto,
-          Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-        background: radial-gradient(1200px 800px at 20% 0%, #16224a 0%, var(--bg) 60%);
-        color: var(--text);
-      }
-      a {
-        color: var(--accent);
-      }
-      #app {
-        min-height: 100%;
-      }
-    </style>
+    <!-- App styles (mobile-first, includes responsive dashboard drawer) -->
+    <link data-trunk rel="css" href="app.css" />
   </head>
   <body>
     <div id="app"></div>
